[package]
name = "sui-sdk"
version = "0.0.0"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
license = "Apache-2.0"
edition = "2021"
publish = false
readme = "README.md"
description = "Sdk for the Sui Blockchain"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg=doc_cfg -Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
    # Enable doc_cfg showing the required features.
    "--cfg=doc_cfg",

    # Generate links to definition in rustdoc source code pages
    # https://github.com/rust-lang/rust/pull/84176
    "-Zunstable-options", "--generate-link-to-definition"
]

[features]
default = []
serde = ["dep:serde", "dep:serde_derive", "dep:serde_with", "dep:bcs", "roaring/std"]
schemars = ["serde", "dep:schemars", "dep:serde_json"]
rand = ["dep:rand_core"]
hash = ["dep:blake2"]

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
bs58 = "0.5.0"
hex = "0.4.3"
roaring = { version = "=0.10.3", default-features = false }
bnum = "0.10.0"
winnow = "0.6.5"

# Serialization and Deserialization support
serde = { version = "1.0.190", optional = true }
serde_derive = { version = "1.0.190", optional = true }
serde_with = { version = "3.6.1", default-features = false, features = ["alloc"], optional = true }
bcs = { version = "0.1.6", optional = true }

# JsonSchema definitions for types, useful for generating an OpenAPI Specificaiton.
serde_json = { version = "1.0.114", optional = true }
schemars = { version = "0.8.21", optional = true }

# RNG support
rand_core = { version = "0.6.4", optional = true }

# Hash support
blake2 = { version = "0.10.6", optional = true }

[dev-dependencies]
bcs = "0.1.6"
serde_json = "1.0.114"
num-bigint = "0.4.4"
jsonschema = { version = "0.18", default-features = false }

# proptest support in tests
#
# Pin to this specific commit in order to work around an issue where proptest doesn't build properly in wasm environments
# see https://github.com/proptest-rs/proptest/pull/270 for more info
proptest = { git = "https://github.com/bmwill/proptest.git", rev = "1a0fe8676aeb61a83f67731404363972c8462424", default-features = false, features = ["std"] }
test-strategy = "0.3.1"
proptest-derive = { version = "0.4.0" }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
