[package]
name = "integration-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
base64ct = { version = "1.8.0", features = ["alloc"] }
serde = "1.0.228"
serde_derive = "1.0.228"
serde_yaml = "0.9.34"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["time"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
futures = "0.3.31"
serde_json = "1.0.148"

sui-crypto = { path = "../sui-crypto", features = ["ed25519"] }
sui-rpc = { path = "../sui-rpc", features = [] }
sui-sdk-types = { path = "../sui-sdk-types", features = [] }
sui-transaction-builder = { path = "../sui-transaction-builder", features = [] }
