[package]
name = "proto-build"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
prost-types = "0.13.3"
prost = "0.13"
protox = "0.7"
tonic-build = "0.13"
walkdir = "2.5.0"
quote = "1.0.40"
proc-macro2 = "1.0.95"
syn = "2.0.104"
prettyplease = "0.2.35"
pbjson-build = { path = "pbjson-build" }
heck = { version = ">=0.4, <=0.5" }
petgraph = { version = ">=0.6, <=0.7", default-features = false }
itertools = { version = ">=0.10, <=0.14", default-features = false, features = ["use_alloc"] }
