[package]
name = "sui-crypto"
version = "0.0.2"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-rust-sdk/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Defines the interface for signing and verying messages in the Sui ecosystem"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg=doc_cfg -Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
    # Enable doc_cfg showing the required features.
    "--cfg=doc_cfg",

    # Generate links to definition in rustdoc source code pages
    # https://github.com/rust-lang/rust/pull/84176
    "-Zunstable-options", "--generate-link-to-definition"
]

[features]
default = []
ed25519 = ["dep:ed25519-dalek", "dep:rand_core"]
secp256r1 = ["dep:p256", "dep:rand_core"]
passkey = ["secp256r1", "dep:sha2"]
secp256k1 = ["dep:k256", "dep:rand_core", "signature/std"]
zklogin = [
    "dep:ark-bn254",
    "dep:ark-ff",
    "dep:ark-groth16",
    "dep:ark-snark",
    "dep:ark-std",
    "dep:base64ct",
    "dep:bnum",
    "dep:itertools",
    "dep:serde",
    "dep:serde_derive",
    "dep:serde_json",
    "signature/std",
]
pem = [
    "dep:pkcs8",
    "dep:pem-rfc7468",
    "ed25519-dalek?/pkcs8",
    "p256?/pkcs8",
    "k256?/pkcs8",
    "ed25519-dalek?/pem",
    "p256?/pem",
    "k256?/pem",
]

[dependencies]
signature = { workspace = true }
sui-sdk-types = { workspace = true, features = ["hash", "serde"] }

# RNG support
rand_core = { workspace = true, optional = true }

# ed25519 support
ed25519-dalek = { workspace = true, optional = true }

# secp256r1 support
p256 = { workspace = true, features = ["ecdsa", "std"], optional = true }

# passkey verification support
sha2 = { workspace = true, optional = true }

# secp256k1 support
k256 = { workspace = true, features = ["ecdsa"], optional = true }

# zklogin verification support
ark-bn254 = { workspace = true, optional = true }
ark-ff = { workspace = true, features = ["asm"], optional = true }
ark-groth16 = { workspace = true, optional = true }
ark-snark = { workspace = true, optional = true }
ark-std = { workspace = true, optional = true }
base64ct = { workspace = true, features = ["alloc"], optional = true }
bnum = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# pkcs8 der and pem support
pkcs8 = { workspace = true, features = ["std"], optional = true }
pem-rfc7468 = { workspace = true, features = ["std"], optional = true }

[dev-dependencies]
bcs = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }

# proptest support in tests
proptest = { workspace = true, features = ["std"] }
test-strategy = { workspace = true }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
