[package]
name = "sui-graphql-client-build"
version = "0.0.6"
authors = ["Stefan Stanciulescu <stefan@mystenlabs.com>", "Brandon Williams <brandon@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-rust-sdk/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Sui GraphQL RPC Client for the Sui Blockchain"

[dependencies]
cynic-codegen = "3.7.3"
