[package]
name = "sui-graphql-client"
version = "0.1.0"
authors = ["Stefan Stanciulescu <stefan@mystenlabs.com>", "Brandon Williams <brandon@mystenlabs.com>"]
license = "Apache-2.0"
edition = "2021"
publish = false
readme = "README.md"
description = "Sui GraphQL RPC Client for the Sui Blockchain"

[dependencies]
anyhow = "1.0.8"
async-trait = "0.1.8"
base64ct = { version = "1.6.0", features = ["alloc"] }
bcs = "0.1.6"
chrono = { version = "0.4.38" }
cynic = { version = "3.8.0" }
reqwest = { version = "0.12", features = ["json"] }
sui-types = { package = "sui-sdk-types", path = "../sui-sdk-types", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
cynic-codegen = { version = "3.8.0" }

