[package]
name = "sui-graphql-client"
version = "0.1.0"
authors = ["Stefan Stanciulescu <stefan@mystenlabs.com>", "Brandon Williams <brandon@mystenlabs.com>"]
license = "Apache-2.0"
edition = "2021"
publish = false
readme = "README.md"
description = "Sui GraphQL RPC Client for the Sui Blockchain"

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64ct = { workspace = true, features = ["alloc", "std"] }
bcs = { workspace = true }
chrono = { workspace = true }
cynic = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sui-types = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
sui-types = { workspace = true, features = ["serde", "rand", "hash"] }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
sui_graphql_client_build = { package = "sui-graphql-client-build", path = "../sui-graphql-client-build" }

