[package]
name = "sui-graphql-client"
version = "0.0.3"
authors = ["Stefan Stanciulescu <stefan@mystenlabs.com>", "Brandon Williams <brandon@mystenlabs.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Sui GraphQL RPC Client for the Sui Blockchain"

[dependencies]
anyhow = "1.0.71"
async-stream = "0.3.3"
async-trait = "0.1.61"
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
bcs = "0.1.4"
chrono = "0.4.26"
cynic = "3.7.3"
futures = "0.3.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.144" }
serde_json = {version = "1.0.95"}
sui-types = { package = "sui-sdk-types", version = "0.0.3", path = "../sui-sdk-types", features = ["serde"] }
tracing = "0.1.37"
tokio = "1.36.0"
url = "2.5.3"

[dev-dependencies]
sui-types = { package = "sui-sdk-types", version = "0.0.3", path = "../sui-sdk-types", features = ["serde", "rand", "hash"] }
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
sui-graphql-client-build = { version = "0.0.3", path = "../sui-graphql-client-build" }
