[package]
name = "sui-graphql-macros"
version = "0.0.1"
authors = ["Joey Pham <joey.pham@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-rust-sdk/"
license = "Apache-2.0"
edition = "2024"
description = "Procedural macros for sui-graphql with compile-time validation"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
darling = "0.20"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
