[package]
name = "sui-graphql"
version = "0.0.1"
authors = ["Joey Pham <joey.pham@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-rust-sdk/"
license = "Apache-2.0"
edition = "2021"
description = "GraphQL client for Sui blockchain"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg=doc_cfg",
    "-Zunstable-options",
    "--generate-link-to-definition"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
