[package]
name = "sui-graphql"
version = "0.0.1"
authors = ["Joey Pham <joey.pham@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-rust-sdk/"
license = "Apache-2.0"
edition = "2024"
description = "GraphQL client for Sui blockchain"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg=doc_cfg",
    "-Zunstable-options",
    "--generate-link-to-definition"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
sui-sdk-types = { version = "0.0.8", path = "../sui-sdk-types", features = ["serde"] }
sui-graphql-macros = { version = "0.0.1", path = "../sui-graphql-macros" }
base64ct = { version = "1.8.0", features = ["alloc"] }
bcs = "0.1.6"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
wiremock = "0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
