[package]
name = "sui-rpc"
version = "0.0.0"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-rust-sdk/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
description = "RPC interface definitions and clients for the Sui Sdk"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg=doc_cfg -Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
    # Enable doc_cfg showing the required features.
    "--cfg=doc_cfg",

    # Generate links to definition in rustdoc source code pages
    # https://github.com/rust-lang/rust/pull/84176
    "-Zunstable-options", "--generate-link-to-definition"
]

[features]
default = []

[dependencies]
bcs = "0.1.6"
serde = { version = "1.0.210" }
sui-sdk-types = { version = "0.0.2", path = "../sui-sdk-types", default-features = false, features = ["serde"] }

# dependencies for the protobuf and gRPC definitions
bytes = "1.9"
tonic = { version = "0.12.3", default-features = false, features = ["channel", "codegen", "prost"] }
prost = "0.13.4"
prost-types = "0.13.3"
tap = "1"

[dev-dependencies]
# codegen for proto and gRPC 
diffy = "0.3"
protox = "0.7"
tonic-build = "0.12.3"
walkdir = "2"

# proptest support in tests
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
test-strategy = "0.4.0"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
