[package]
name = "sui-rpc"
version = "0.0.6"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-rust-sdk/"
license = "Apache-2.0"
edition = "2021"
description = "RPC interface definitions and client for the Sui Sdk"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg=doc_cfg -Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
    # Enable doc_cfg showing the required features.
    "--cfg=doc_cfg",

    # Generate links to definition in rustdoc source code pages
    # https://github.com/rust-lang/rust/pull/84176
    "-Zunstable-options", "--generate-link-to-definition"
]

[features]
default = []

[dependencies]
bcs = "0.1.6"
serde = { version = "1.0.210" }
sui-sdk-types = { version = "0.0.6", path = "../sui-sdk-types", default-features = false, features = ["serde", "hash"] }
roaring = { version = "0.10.9", default-features = false }

# dependencies for the protobuf and gRPC definitions
bytes = "1.9"
tonic = { version = "0.13", default-features = false, features = ["channel", "codegen", "prost", "tls-ring", "tls-webpki-roots", "zstd"] }
prost = "0.13.4"
prost-types = "0.13.3"
tap = "1"
base64 = "0.22.1"
serde_json = "1.0.140"
http = "1.3.1"

[dev-dependencies]
rand = "0.8"
paste = "1.0.15"
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
test-strategy = { version = "0.4" }
sui-sdk-types = { version = "0.0.6", path = "../sui-sdk-types", default-features = false, features = ["proptest", "serde", "hash"] }
serde_json = { version = "1.0.128" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
