[package]
name = "sui-sdk-types"
version = "0.0.2"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
repository = "https://github.com/mystenlabs/sui-rust-sdk/"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
description = "Core types for the Sui Sdk"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg=doc_cfg -Zunstable-options --generate-link-to-definition" RUSTC_BOOTSTRAP=1 cargo doc --all-features --no-deps --open
all-features = true
rustdoc-args = [
    # Enable doc_cfg showing the required features.
    "--cfg=doc_cfg",

    # Generate links to definition in rustdoc source code pages
    # https://github.com/rust-lang/rust/pull/84176
    "-Zunstable-options", "--generate-link-to-definition"
]

[features]
default = []
serde = ["dep:serde", "dep:serde_derive", "dep:serde_with", "dep:bcs", "dep:serde_json", "roaring/std"]
rand = ["dep:rand_core"]
hash = ["dep:blake2"]
proptest = ["dep:proptest", "dep:test-strategy", "serde"]

[dependencies]
base64ct = { workspace = true, features = ["alloc"] }
bs58 = { workspace = true }
hex = { workspace = true }
roaring = { workspace = true }
bnum = { workspace = true }
winnow = { workspace = true }

# Serialization and Deserialization support
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
serde_with = { workspace = true, features = ["alloc"], optional = true }
bcs = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# RNG support
rand_core = { workspace = true, optional = true }

# Hash support
blake2 = { workspace = true, optional = true }

# proptest support
proptest = { workspace = true, features = ["std"], optional = true }
test-strategy = { workspace = true, optional = true }

[dev-dependencies]
bcs = { workspace = true }
serde_json = { workspace = true }
num-bigint = { workspace = true }
paste = { workspace = true }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
