[package]
name = "sui-transaction-builder"
version = "0.2.1"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
license = "Apache-2.0"
edition = "2024"
description = "Transaction API for the Rust SDK for the Sui Blockchain"

[dependencies]
bcs = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.15", default-features = false, features = ["alloc"] }
sui-sdk-types = { version = "0.2.1", path = "../sui-sdk-types", features = ["serde", "hash"] }
thiserror = "2.0"
async-trait = "0.1.89"

sui-rpc = { version = "0.2.1", path = "../sui-rpc" }
